# Loom

./: .gitignore  LICENSE  Makefile  README.md
app/: .env.example  Makefile  config.py  docker-compose.yml  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_initial_schema.py  0002_resize_embedding_768.py  0003_add_document_metadata.py  0004_add_hnsw_index.py  0005_add_projects.py
app/api/routes/: graph.py  ingest.py  projects.py  query.py
app/data/corpus/: aperture-media.md  ashby-capital-profile.md  ashby-capital.md  atlas-arm.md  beacon-semiconductor.md  cascade-integration.md  cascade-payments.md  dana-whitfield.md  draftwave-partnership.md  draftwave.md  elena-sorenson.md  elmsworth-cluster.md  grace-okoye.md  halcyon-labs.md  insight-suite.md  leon-ashby.md  lumen-health-platform.md  lumen-health.md  mara-lindqvist.md  marcus-feld.md  meridian-robotics.md  nadia-cole.md  nimbus-acquisitions.md  nimbus-systems.md  northwind-portfolio.md  northwind-ventures.md  oracle-engine.md  owen-castellano.md  photon-chip.md  pinnacle-security.md  priya-raman.md  quill.md  quillpad.md  ravi-anand.md  (+6 more)
app/db/: models.py  session.py
app/eval/: metrics.py  qa_set.json  run_eval.py
app/extraction/: batch.py  extractor.py  graph_store.py  prompts.py  schemas.py
app/ingestion/: chunker.py  embedder.py  ingest_and_extract.py  loaders.py  pipeline.py
app/retrieval/: agent.py  generator.py  graph_builder.py  graph_traversal.py  hybrid.py  prompts.py  vector_search.py
app/scripts/: seed_corpus.py
app/tests/: conftest.py  embedder_test.py
(+31 files in other folders)
